# open_codex

./: .gitignore  README.md  ai-agents-2025-comprehensive-report.md  electron-builder.yml  package-lock.json  package.json  改造方案.md
scripts/: check-html.js  check.js  gen-protocol.js
src/: main.js  preload.js  renderer.html
src/main/config/: store.js
src/main/engine/: appServerAdapter.js  index.js  jsonRpc.js  sdkAdapter.js  types.js
src/main/engine/adapters/: agentmateAdapter.js  appServerAdapter.js  sdkAdapter.js
src/main/engine/agentmate-python/: agentmate.example.toml  bridge.py  pyproject.toml
src/main/engine/agentmate-python/agentmate/: __init__.py  config.py
src/main/engine/agentmate-python/agentmate/context/: __init__.py  budget.py  compressor.py  trimmer.py
src/main/engine/agentmate-python/agentmate/core/: __init__.py  agent.py  events.py  message.py  sanitize.py
src/main/engine/agentmate-python/agentmate/llm/: __init__.py  base.py  openai_client.py
src/main/engine/agentmate-python/agentmate/server/: __init__.py  app.py
src/main/engine/agentmate-python/agentmate/server/static/: index.html
src/main/engine/agentmate-python/agentmate/skills/: __init__.py  loader.py  models.py  registry.py  tools.py
src/main/engine/agentmate-python/agentmate/tools/: __init__.py  builtin.py  executor.py  files.py  registry.py
src/main/store/: db.js  repositories.js
src/main/util/: logger.js
src/renderer/ui/: agentView.js  approvals.js  settings.js  sidebar.js  terminalPanel.js
