[project]
name = "open-codex-agent"
version = "0.1.0"
description = "AgentMate Python engine for Open Codex"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.40",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agentmate"]
